--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Ed Tech</title>
+    <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- link bootstarp -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- navbar start  -->
@@ -42,6 +45,119 @@
       </div>
     </nav>
     <!-- navbar end  -->
+    <!-- carousel start -->
+    <div id="carouselExample" class="carousel slide mb-5">
+      <div class="carousel-inner container">
+        <div class="carousel-item active">
+          <img src="img/slider/cover-1.png" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slider/cover-2.jpg" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slider/cover-3 (1).jpg" class="d-block w-100" alt="">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- carousel end -->
+    <!-- discover start -->
+    <div class="container discover">
+      <h1>Discover Our Popular Courses</h1>
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    </div>
+    <!-- discover end -->
+    <!-- courses start -->
+    <div class="container mt-5">
+      <div class="row">
+        <!-- 1 col start-->
+        <div class="col col-lg-6 col-md-12 col-sm-12 ">
+          <div class="d-flex course">
+            <!-- img start -->
+            <img src="img/course/course-1 (1).png" alt=" course-1" class="img-fluid me-4 ">
+            <!-- img end -->
+            <!-- content start -->
+            <div class="mt-4 content">
+            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+            <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <h2 class="fs-5 ">Price : 20$</h2>
+          </div>
+            <!-- content end -->
+          </div>
+          <div class="d-flex mt-5 mb-5">
+            <!-- img start -->
+            <img src="img/course/course-2.png" alt=" course-2" class="img-fluid me-5 ">
+            <!-- img end -->
+            <!-- content start -->
+            <div class="mt-4 content">
+            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+            <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <h2 class="fs-5">Price : 20$</h2>
+          </div>
+            <!-- content end -->
+          </div>
+          <div class="d-flex">
+            <!-- img start -->
+            <img src="img/course/course-3.png" alt=" course-3" class="img-fluid me-5 ">
+            <!-- img end -->
+            <!-- content start -->
+            <div class="mt-4 content">
+            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+            <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <h2 class="fs-5">Price : 20$</h2>
+          </div>
+            <!-- content end -->
+          </div>
+        </div>
+        <!-- 1 col end-->
+        <!-- 2 col start -->
+        <div class="col col-lg-6 col-md-12 col-sm-12 mt-md-5 mt-sm-5">
+          <div class="d-flex">
+            <!-- img start -->
+            <img src="img/course/course-4.png" alt=" course-4" class="img-fluid me-5 ">
+            <!-- img end -->
+            <!-- content start -->
+            <div class="mt-4 content">
+            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+            <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <h2 class="fs-5">Price : 20$</h2>
+          </div>
+            <!-- content end -->
+          </div>
+          <div class="d-flex mt-5 mb-5">
+            <!-- img start -->
+            <img src="img/course/course-5.png" alt=" course-5" class="img-fluid me-5 ">
+            <!-- img end -->
+            <!-- content start -->
+            <div class="mt-4 content">
+            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+            <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <h2 class="fs-5">Price : 20$</h2>
+          </div>
+            <!-- content end -->
+          </div>
+          <div class="d-flex">
+            <!-- img start -->
+            <img src="img/course/course-6.png" alt=" course-6" class="img-fluid me-5 ">
+            <!-- img end -->
+            <!-- content start -->
+            <div class="mt-4 content">
+            <h3 class="fs-5">Fundamental Of UI/UX Design</h3>
+            <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
+            <h2 class="fs-5">Price : 20$</h2>
+          </div>
+        <!-- 2 col end -->
+      </div>
+      
+    </div>
+    <!-- courses end -->
 
 
 
