--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- link bootstarp -->
+    <!-- link css-media-css -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
+    <!-- link css-media-css -->
   </head>
   <body>
     <!-- navbar start  -->
@@ -48,14 +51,14 @@
     <!-- carousel start -->
     <div id="carouselExample" class="carousel slide mb-5">
       <div class="carousel-inner container">
-        <div class="carousel-item active">
-          <img src="img/slider/cover-1.png" class="d-block w-100" alt="">
+        <div class="carousel-item active carousel">
+          <img src="img/slider/cover-1.png" class="d-block w-100" alt="" class="img-fluid">
         </div>
         <div class="carousel-item">
-          <img src="img/slider/cover-2.jpg" class="d-block w-100" alt="">
+          <img src="img/slider/cover-2.jpg" class="d-block w-100" alt="" class="img-fluid">
         </div>
         <div class="carousel-item">
-          <img src="img/slider/cover-3 (1).jpg" class="d-block w-100" alt="">
+          <img src="img/slider/cover-3 (1).jpg" class="d-block w-100" alt="" class="img-fluid">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -79,7 +82,7 @@
       <div class="row">
         <!-- 1 col start-->
         <div class="col col-lg-6 col-md-12 col-sm-12 ">
-          <div class="d-flex course">
+          <div class="d-flex course ">
             <!-- img start -->
             <img src="img/course/course-1 (1).png" alt=" course-1" class="img-fluid me-4 ">
             <!-- img end -->
@@ -91,7 +94,7 @@
           </div>
             <!-- content end -->
           </div>
-          <div class="d-flex mt-5 mb-5">
+          <div class="d-flex mt-5 mb-5 course">
             <!-- img start -->
             <img src="img/course/course-2.png" alt=" course-2" class="img-fluid me-5 ">
             <!-- img end -->
@@ -103,7 +106,7 @@
           </div>
             <!-- content end -->
           </div>
-          <div class="d-flex">
+          <div class="d-flex course">
             <!-- img start -->
             <img src="img/course/course-3.png" alt=" course-3" class="img-fluid me-5 ">
             <!-- img end -->
@@ -118,8 +121,8 @@
         </div>
         <!-- 1 col end-->
         <!-- 2 col start -->
-        <div class="col col-lg-6 col-md-12 col-sm-12 mt-md-5 mt-sm-5">
-          <div class="d-flex">
+        <div class="col col-lg-6 col-md-12 col-sm-12 mt-lg-0 mt-md-5 mt-sm-5">
+          <div class="d-flex course">
             <!-- img start -->
             <img src="img/course/course-4.png" alt=" course-4" class="img-fluid me-5 ">
             <!-- img end -->
@@ -131,7 +134,7 @@
           </div>
             <!-- content end -->
           </div>
-          <div class="d-flex mt-5 mb-5">
+          <div class="d-flex course mt-5 mb-5">
             <!-- img start -->
             <img src="img/course/course-5.png" alt=" course-5" class="img-fluid me-5 ">
             <!-- img end -->
@@ -143,7 +146,7 @@
           </div>
             <!-- content end -->
           </div>
-          <div class="d-flex">
+          <div class="d-flex course">
             <!-- img start -->
             <img src="img/course/course-6.png" alt=" course-6" class="img-fluid me-5 ">
             <!-- img end -->
