--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <!-- carousel end -->
     <!-- discover start -->
     <div class="container discover">
-      <h1>Discover Our Popular Courses</h1>
-      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+      <h1 class="text-black">Discover Our Popular Courses</h1>
+      <p class="text-body-tertiary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
     </div>
     <!-- discover end -->
     <!-- courses start -->
@@ -161,6 +161,213 @@
       
     </div>
     <!-- courses end -->
+    <!-- explore start -->
+    <div class="container px-4 ">
+      <div class="row ">
+        <div class="col col-lg-6 col-md-12 col-sm-12">
+          <!-- img section -->
+          <img src="img/workl/working.png" alt="work" class="img-fluid">
+          <!-- img section -->
+        </div>
+        <!-- content section -->
+        <div class="col col-lg-6 col-md-12 col-sm-12 section ">
+        <h1>Explore The elearning Institute</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+        <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+        <!-- icon start -->
+       <div class="d-flex justify-content-between">
+          <div>
+            <h1 class="fs-3">3.2K+</h1>
+            <p class="text-body-tertiary">Online Course</p>
+          </div>
+          <div>
+            <h1 class="fs-3" >600+</h1>
+            <p class="text-body-tertiary">Expert member</p>
+          </div>
+          <div>
+            <h1 class="fs-3">1k+</h1>
+            <p class="text-body-tertiary">Rating & Review</p>
+          </div>
+        </div>
+        <!-- icon end -->
+        <button class="btn btn-primary rounded-0"> 
+          Read more
+        </button>
+        <!-- content section -->
+      </div>
+    </div>
+    <!-- explore end -->
+<!-- meet start -->
+<div class="container section mb-5">
+  <div class="row">
+    <div class="col col-lg-6 col-md-7 col-sm-9 col-12">
+      <h1 class="fs-1 fw-bold">Meet Our Successfull Students</h1>
+      <p class="text-body-tertiary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    </div>
+    <div class="col col-lg-7 col-md-5 col-sm-3 col-0"></div>
+  </div>
+</div>
+<!-- meet end -->
+<!-- img start -->
+<div class="container">
+  <div class="row gy-4">
+    <div class="col col-lg-3 col-md-6 col-sm-6 col-12">
+      <img src="img/student/student-1.png" alt="student-1" class="img-fluid">
+      <h5>Awlad Hossain</h5>
+      <p class="text-body-tertiary">UIUX Designer</p>
+    </div>
+    <div class="col col-lg-3 col-md-6 col-sm-6 col-12">
+<img src="img/student/student-2.png" alt="student-2" class="img-fluid">
+<h5>Jannatul Islam</h5>
+<p class="text-body-tertiary">Motion Design</p>
+    </div>
+    <div class="col col-lg-3 col-md-6 col-sm-6 col-12">
+<img src="img/student/student-3.png" alt="student-3" class="img-fluid">
+<h5>Imran Hossain</h5>
+<p class="text-body-tertiary">Graphic Designer</p>
+    </div>
+    <div class="col col-lg-3 col-md-6 col-sm-6 col-12">
+<img src="img/student/student-4.png" alt="student-4" class="img-fluid">
+<h5>Nishi Akter</h5>
+<p v>Web Developer</p>
+    </div>
+  </div>
+</div>
+<!-- img end -->
+<!-- view all start -->
+<div class="d-flex justify-content-center">
+  <button class="btn btn-primary text-white px-4 rounded-0">
+    View All
+  </button>
+</div>
+<!-- view all end -->
+<!-- feedback start -->
+<!-- corousel feddback start -->
+<div class="container discover mt-5">
+  <h3 class="text-black ">Some Students Feedback</h3>
+  <p class="text-body-tertiary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+</div>
+<!-- feedback end -->
+<!-- comment start -->
+<div class="container px-4 mt-5 ">
+  <div class="row gx-5">
+    <div class="col col-lg-6 col-md-12 col-sm-12 mb-md-4 mb-4">
+      <!-- comma star start -->
+      <div>
+        <img src="img/comma.png" alt="comma" class="img-fluid">
+      </div>
+      <!-- comma star end -->
+     <p class="mt-3 mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+     <!-- cooment with std start -->
+     <div class="d-flex">
+     <img src="img/feedback/student-5.png" alt="student-5" class="img-fluid">
+     <div>
+     <h5 class="ms-5">Awlad Hossain</h5>
+     <p class="ms-5">UI Designer</p>
+    </div>
+    </div>
+     <!-- cooment with std end -->
+    </div>
+    <div class="col col-lg-6 col-md-12 col-sm-12 ">
+      <!-- comma star start -->
+      <div>
+        <img src="img/comma.png" alt="comma" class="img-fluid">
+      </div>
+      <!-- comma star end -->
+     <p class="mt-3 mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+     <!-- cooment with std start -->
+     <div class="d-flex">
+     <img src="img/feedback/student-6.png" alt="student-6" class="img-fluid">
+     <div>
+     <h5 class="ms-5">Shanta Akter</h5>
+     <p class="ms-5">Graphic Designer</p>
+    </div>
+    </div>
+     <!-- cooment with std end -->
+    </div>
+  </div>
+</div>
+<!-- comment end -->
+
+<!--question start  -->
+<div class="container discover mt-5">
+  <h3 class="text-black ">Frequently Asked Questions</h3>
+  <p class="text-body-tertiary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+</div>
+<!--question end -->
+<!-- accordian start -->
+<div class="accordion mt-5 mb-5" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        What other services are you compatible with?
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the generators on the.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        I have a technical i need resolved, who do i email?
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the generators on the.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        What other services are you compatible with?
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+       <p>There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the generators on the.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        What other services are you compatible with?
+      </button>
+    </h2>
+    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+       <p>There are many variations of passages of available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the generators on the.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- acordian end -->
+<!-- trusted start -->
+<div class="d-flex justify-content-center mb-5">
+  <h3>Trusted by over 800+ companies</h3>
+</div>
+<!-- trusted end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
