--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- discover end -->
     <!-- courses start -->
     <div class="container mt-5">
-      <div class="row">
+      < class="row">
         <!-- 1 col start-->
         <div class="col col-lg-6 col-md-12 col-sm-12 ">
           <div class="d-flex course ">
@@ -162,9 +162,9 @@
     </div>
     <!-- courses end -->
     <!-- explore start -->
-    <div class="container px-4 ">
+    <div class="container px-4  mb-5 mb-lg-0 ">
       <div class="row ">
-        <div class="col col-lg-6 col-md-12 col-sm-12">
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 ">
           <!-- img section -->
           <img src="img/workl/working.png" alt="work" class="img-fluid">
           <!-- img section -->
@@ -196,7 +196,31 @@
         <!-- content section -->
       </div>
     </div>
+    </div>
     <!-- explore end -->
+<!-- join start -->
+<div class="container px-4 bg-primary">
+  <div class="row gx-5">
+    <div class="join">
+    <div class="col col-lg-10 col-md-8 col-sm-12">
+     <!-- content start -->
+     <h1 class="text-white" >Ready to join?</h1>
+     <p class=" text-white">It is a long established fact that a reader will be distracted by the readable</p>
+     <p class="text-white mb"> content of a page when looking at its layout.</p>
+     <!-- content end -->
+    </div>
+    <div class="col col-lg-2 col-md-4 col-sm-12 ">
+      <!-- btn start -->
+     <button class="btn text-bg-light text-primary fw-bold ">
+      Register Now
+     </button>
+     <!-- btn end -->
+    </div>
+  </div>
+</div>
+</div>
+<!-- join end -->
+
 <!-- meet start -->
 <div class="container section mb-5">
   <div class="row">
@@ -349,13 +373,43 @@
 <!-- acordian end -->
 <!-- trusted start -->
 <div class="d-flex justify-content-center mb-5">
-  <h3>Trusted by over 800+ companies</h3>
+  <h3 class="trust">Trusted by over 800+ companies</h3>
 </div>
 <!-- trusted end -->
-
-
-
-
+<!-- icon start -->
+<div class="container mt-5">
+  <div class="row gx-5">
+    <div class="col col-lg-2 col-md-4 col-sm-6 col-12 mb-5 mb-lg-0">
+      <img src="img/icon/company-1.png" alt="icon-1" class="img-fluid">
+    </div>
+    <div class="col col-lg-2 col-md-4 col-sm-6 col-12 mb-5 mb-lg-0">
+      <img src="img/icon/company-2.png" alt="icon-2" class="img-fluid">
+    </div>
+    <div class="col col-lg-2 col-md-4 col-sm-6 col-12 mb-5 mb-lg-0">
+      <img src="img/icon/company-3.png" alt="icon-3" class="img-fluid">
+    </div>
+    <div class="col col-lg-2 col-md-4 col-sm-6 col-12 mb-5 mb-lg-0">
+      <img src="img/icon/company-4.png" alt="icon-4" class="img-fluid">
+    </div>
+    <div class="col col-lg-2 col-md-4 col-sm-6 col-12 mb-5 mb-lg-0">
+      <img src="img/icon/company-5.png" alt="icon-5" class="img-fluid">
+    </div>
+    <div class="col col-lg-2 col-md-4 col-sm-6 col-12 mb-5 mb-lg-0">
+      <img src="img/icon/company-6.png" alt="icon-6" class="img-fluid">
+    </div>
+  </div>
+</div>
+<!-- icon end -->
+<!-- footer start -->
+<div class="d-flex justify-content-center bg-black mb-5 mt-5 footer ">
+<footer class="discover-1 mt-5">
+  <h1 class="fs-3 text-white">Pro Edu</h1>
+  <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, 
+    Sultanate of Oman</p>
+    <p class="text-white">Privacy Ploicy  |   Terms of use</p>
+</footer>
+</div>
+<!-- footer end -->
 
 
 
