--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- link bootstarp -->
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <!-- font awesome link -->
     <!-- link css-media-css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
@@ -79,7 +82,7 @@
     <!-- discover end -->
     <!-- courses start -->
     <div class="container mt-5">
-      < class="row">
+    <div class="row">
         <!-- 1 col start-->
         <div class="col col-lg-6 col-md-12 col-sm-12 ">
           <div class="d-flex course ">
@@ -157,8 +160,9 @@
             <h2 class="fs-5">Price : 20$</h2>
           </div>
         <!-- 2 col end -->
-      </div>
-      
+      </div> 
+    </div>
+    </div>
     </div>
     <!-- courses end -->
     <!-- explore start -->
@@ -253,7 +257,7 @@
     <div class="col col-lg-3 col-md-6 col-sm-6 col-12">
 <img src="img/student/student-4.png" alt="student-4" class="img-fluid">
 <h5>Nishi Akter</h5>
-<p v>Web Developer</p>
+<p >Web Developer</p>
     </div>
   </div>
 </div>
@@ -277,8 +281,16 @@
   <div class="row gx-5">
     <div class="col col-lg-6 col-md-12 col-sm-12 mb-md-4 mb-4">
       <!-- comma star start -->
-      <div>
+      <div class="d-flex justify-content-between">
         <img src="img/comma.png" alt="comma" class="img-fluid">
+        <!-- rating start -->
+     <div>
+      <i class="fa-solid fa-star "></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
+     </div>
+     <!-- rating end -->
       </div>
       <!-- comma star end -->
      <p class="mt-3 mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
@@ -294,8 +306,16 @@
     </div>
     <div class="col col-lg-6 col-md-12 col-sm-12 ">
       <!-- comma star start -->
-      <div>
+      <div class="d-flex justify-content-between">
         <img src="img/comma.png" alt="comma" class="img-fluid">
+        <!-- rating start -->
+        <div>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-regular fa-star"></i>
+        </div>
+        <!-- rating end -->
       </div>
       <!-- comma star end -->
      <p class="mt-3 mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
@@ -320,6 +340,7 @@
 </div>
 <!--question end -->
 <!-- accordian start -->
+<div class="container">
 <div class="accordion mt-5 mb-5" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -370,6 +391,7 @@
     </div>
   </div>
 </div>
+</div>
 <!-- acordian end -->
 <!-- trusted start -->
 <div class="d-flex justify-content-center mb-5">
@@ -407,6 +429,12 @@
   <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, 
     Sultanate of Oman</p>
     <p class="text-white">Privacy Ploicy  |   Terms of use</p>
+    <div class="d-flex justify-content-evenly icon">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-tiktok"></i>
+      <i class="fa-brands fa-instagram"></i>
+    </div>
 </footer>
 </div>
 <!-- footer end -->
