--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- font awesome link -->
+    <!-- google font start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- google font end -->
     <!-- link css-media-css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
@@ -64,7 +69,7 @@
           <img src="img/slider/cover-3 (1).jpg" class="d-block w-100" alt="" class="img-fluid">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <button class="carousel-control-prev " type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
