--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="container mt-5">
     <div class="row">
         <!-- 1 col start-->
-        <div class="col col-lg-6 col-md-12 col-sm-12 ">
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 ">
           <div class="d-flex course ">
             <!-- img start -->
             <img src="img/course/course-1 (1).png" alt=" course-1" class="img-fluid me-4 ">
@@ -129,7 +129,7 @@
         </div>
         <!-- 1 col end-->
         <!-- 2 col start -->
-        <div class="col col-lg-6 col-md-12 col-sm-12 mt-lg-0 mt-md-5 mt-sm-5">
+        <div class="col col-lg-6 col-md-12 col-sm-12 col-12 mt-lg-0 mt-md-5 mt-sm-5">
           <div class="d-flex course">
             <!-- img start -->
             <img src="img/course/course-4.png" alt=" course-4" class="img-fluid me-5 ">
