--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     <!-- link css-media-css -->
+     <!-- Favicon -->
+      <link rel="shortcut icon" href="img/workl/working.png" type="image/x-icon">
+      <!-- Favicon -->
   </head>
   <body>
     <!-- navbar start  -->
@@ -207,7 +210,7 @@
     </div>
     </div>
     <!-- explore end -->
-<!-- join start -->
+<!--Register start -->
 <div class="container px-4 bg-primary">
   <div class="row gx-5">
     <div class="join">
@@ -228,8 +231,7 @@
   </div>
 </div>
 </div>
-<!-- join end -->
-
+<!--Register end-->
 <!-- meet start -->
 <div class="container section mb-5">
   <div class="row">
@@ -322,9 +324,10 @@
         </div>
         <!-- rating end -->
       </div>
-      <!-- comma star end -->
+      <!-- comma start-->
      <p class="mt-3 mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
-     <!-- cooment with std start -->
+      <!-- comma end -->
+     <!-- comment start -->
      <div class="d-flex">
      <img src="img/feedback/student-6.png" alt="student-6" class="img-fluid">
      <div>
@@ -332,12 +335,11 @@
      <p class="ms-5">Graphic Designer</p>
     </div>
     </div>
-     <!-- cooment with std end -->
+     <!-- comment end -->
     </div>
   </div>
 </div>
 <!-- comment end -->
-
 <!--question start  -->
 <div class="container discover mt-5">
   <h3 class="text-black ">Frequently Asked Questions</h3>
@@ -443,47 +445,6 @@
 </footer>
 </div>
 <!-- footer end -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
