--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!-- Doctype document -->
+<!Doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -37,19 +38,19 @@
               <a class="nav-link active ms-5 text-secondary" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active ms-5 text-secondary" aria-current="page" href="#">Courses</a>
+              <a class="nav-link active ms-5 text-secondary" aria-current="page" href="#courses">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#">Deals</a>
+              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#deals">Deals</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#">Success</a>
+              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#success">Success</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#">About</a>
+              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#">Register</a>
+              <a class="nav-link active  ms-5 text-secondary" aria-current="page" href="#register">Register</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -89,7 +90,7 @@
     </div>
     <!-- discover end -->
     <!-- courses start -->
-    <div class="container mt-5">
+    <div class="container mt-5" id="courses">
     <div class="row">
         <!-- 1 col start-->
         <div class="col col-lg-6 col-md-12 col-sm-12 col-12 ">
@@ -155,7 +156,7 @@
             <p class="fs-6">Some quick example text to build on the card title and make up the bulk of the card.</p>
             <h2 class="fs-5">Price : 20$</h2>
           </div>
-            <!-- content end -->
+            <!--content end-->
           </div>
           <div class="d-flex course">
             <!-- img start -->
@@ -174,7 +175,7 @@
     </div>
     <!-- courses end -->
     <!-- explore start -->
-    <div class="container px-4  mb-5 mb-lg-0 ">
+    <div class="container px-4  mb-5 mb-lg-0 " id="deals">
       <div class="row ">
         <div class="col col-lg-6 col-md-12 col-sm-12 col-12 ">
           <!-- img section -->
@@ -211,7 +212,7 @@
     </div>
     <!-- explore end -->
 <!--Register start -->
-<div class="container px-4 bg-primary">
+<div class="container px-4 bg-primary" id="register">
   <div class="row gx-5">
     <div class="join">
     <div class="col col-lg-10 col-md-8 col-sm-12">
@@ -244,7 +245,7 @@
 </div>
 <!-- meet end -->
 <!-- img start -->
-<div class="container">
+<div class="container" id="success">
   <div class="row gy-4">
     <div class="col col-lg-3 col-md-6 col-sm-6 col-12">
       <img src="img/student/student-1.png" alt="student-1" class="img-fluid">
@@ -430,7 +431,7 @@
 </div>
 <!-- icon end -->
 <!-- footer start -->
-<div class="d-flex justify-content-center bg-black mb-5 mt-5 footer ">
+<div class="d-flex justify-content-center bg-black mb-5 mt-5 footer " id="about">
 <footer class="discover-1 mt-5">
   <h1 class="fs-3 text-white">Pro Edu</h1>
   <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, 
